--- a/index.html
+++ b/index.html
@@ -370,13 +370,15 @@
     </table>
   </center>
 </body>
- <div style="width: 100%; background-color:#0e0d0a; border-color: black; box-shadow: 0px 8px 16px black; height: 100px;
-  margin-top: 40px; font-family: Arial, Helvetica, sans-serif; color: gray; padding-left: 20px; padding-top: 10px;"> 
+ <div style="width: 100%; background-color:#0e0d0a; border-color: black; box-shadow: 0px 8px 16px black; height: 100%;
+  margin-top: 40px; font-family: Arial, Helvetica, sans-serif; color: gray; padding-left: 20px; padding-top: 10px; padding-bottom: 20px;"> 
+
   <h1 style="font-size: 15px; font-weight: bold; margin-bottom: 0;"> Credits:</h1> 
   <a href="https://twitter.com/wjlazarraga" style="font-size: 13px;"> @wjlazarraga </a> 
   <img src="KB.png" style="width:25px;height:25px; margin-bottom: -7px; ">
 <div><a href="https://www.leagueoflegends.com/en-us/" style="font-size: 13px;">Download League of Legends</a> 
   <img src="league.png" style="width:25px;height:25px; margin-bottom: -7px; "></div>
+
 </div>
 <script src="index.js"></script>
 </html>
