--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
     </table>
 
     <table style="margin-top: 30px;">
-      <tr> <td>LP Defeceit (Team 1 LP - Team 2 LP)</td> </tr>
+      <tr> <td>LP Deficit (Team 1 LP - Team 2 LP)</td> </tr>
       <tr> <td id="Defeceit"> </td></tr>
     </table>
   </center>
