--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <center> 
     <div style="width: 101.1%; background-color:#0e0d0a; border-color: black; box-shadow: 0px 8px 16px black; margin-bottom: 25px;">
-      <img src="porologo.png" style="width: 500px;height:140.625px;padding-top: 20px;">
+      <img src="porologo.png" style="width: 40%;height:40%;padding-top: 20px;">
     </div>
 
     <p>*League of Legends custom game balancer*</p>
